--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
       <div class="aviator-top-content">
         <img draggable="false" src="assets/aviator/icons/logo.svg" alt="logo" class="aviator-logo-game">
-        <p class="aviator-name-bot">@...</p>
+        <p class="aviator-name-bot">@LuckyJetpackBot</p>
       </div>
 
       <div class="aviator-container">
@@ -137,7 +137,7 @@
           <button class="aviator-get-signal lng-allGameGetSignal" id="aviator-get-signal">GET SIGNAL</button>
           <button class="aviator-get-signal-two aviator-deactivate lng-allGameGetSignal" id="aviator-get-signal-two">GET
             SIGNAL</button>
-          <a href="https://1wzlcz.life/casino/play/aviator" class="aviator-game-here lng-allGameGameHere">GAME
+          <a href="https://1wyfui.life/casino/play/aviator" class="aviator-game-here lng-allGameGameHere">GAME
             HERE</a>
         </div>
       </div>
@@ -170,7 +170,7 @@
 
       <div class="luckyjet-top-content">
         <img draggable="false" src="assets/luckyjet/icons/logo.png" alt="logo" class="luckyjet-logo-game">
-        <p class="luckyjet-name-bot">@...</p>
+        <p class="luckyjet-name-bot">@LuckyJetpackBot</p>
       </div>
 
       <div class="luckyjet-container">
@@ -186,7 +186,7 @@
             <button class="luckyjet-get-signal-two luckyjet-deactivate lng-allGameGetSignal"
               id="luckyjet-get-signal-two">GET
               SIGNAL</button>
-            <a href="https://1wzlcz.life/casino/play/1play_1play_luckyjet"
+            <a href="https://1wyfui.life/casino/play/1play_1play_luckyjet"
               class="luckyjet-game-here lng-allGameGameHere">GAME HERE</a>
           </div>
         </div>
@@ -219,7 +219,7 @@
 
       <div class="rocket-queen-top-content">
         <img draggable="false" src="assets/rocket-queen/icons/logo.png" alt="logo" class="rocket-queen-logo-game">
-        <p class="rocket-queen-name-bot">@...</p>
+        <p class="rocket-queen-name-bot">@LuckyJetpackBot</p>
       </div>
 
       <div class="rocket-queen-container">
@@ -238,7 +238,7 @@
             <button class="rocket-queen-get-signal-two rocket-queen-deactivate lng-allGameGetSignal"
               id="rocket-queen-get-signal-two">GET
               SIGNAL</button>
-            <a href="https://1wzlcz.life/casino/play/1play_1play_rocketqueen"
+            <a href="https://1wyfui.life/casino/play/1play_1play_rocketqueen"
               class="rocket-queen-game-here lng-allGameGameHere">GAME HERE</a>
           </div>
         </div>
